// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.project has a cache string 1`] = `
Object {
  "hash": Any<String>,
}
`;

exports[`bud.project has a cli object 1`] = `
Object {
  "args": Object {},
  "argv": Array [],
  "flags": Object {},
  "metadata": Object {},
  "raw": Array [],
}
`;

exports[`bud.project has a record of .env values 1`] = `
Object {
  "PUBLIC_APP_TEST": "PUBLIC_VALUE",
  "TEST": "VALUE",
}
`;

exports[`bud.project has a record of .env values 2`] = `
Object {
  "APP_TEST": "PUBLIC_VALUE",
}
`;

exports[`bud.project has a reference to @roots/bud-tailwindcss 1`] = `
Object {
  "bud": Object {
    "peers": Array [
      "@roots/bud-postcss",
    ],
    "type": "extension",
  },
  "name": "@roots/bud-tailwindcss",
  "peerDependencies": Object {
    "tailwindcss": "3.0.8",
  },
  "requires": Array [
    Array [
      "tailwindcss",
      "3.0.8",
    ],
    Array [
      "@roots/bud-postcss",
      Any<String>,
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project has cache dependencies 1`] = `
Array [
  StringContaining "project/package.json",
  StringContaining "project/bud.config.js",
]
`;

exports[`bud.project has profile records matching runtime records 1`] = `
Object {
  "PUBLIC_APP_TEST": "PUBLIC_VALUE",
  "TEST": "VALUE",
}
`;

exports[`bud.project has profile records matching runtime records 2`] = `
Object {
  "APP_TEST": "PUBLIC_VALUE",
}
`;

exports[`bud.project has the path to the bud.config.js config 1`] = `
Array [
  StringContaining "project/bud.config.js",
]
`;

exports[`bud.project has the path to the bud.config.js config 2`] = `Array []`;

exports[`bud.project has the path to the bud.config.js config 3`] = `Array []`;

exports[`bud.project has the path to the bud.config.js config 4`] = `Array []`;

exports[`bud.project matches expected adjacency array 1`] = `"@roots/bud-eslint"`;

exports[`bud.project matches expected adjacency array 2`] = `"@roots/bud-entrypoints"`;

exports[`bud.project matches expected adjacency array 3`] = `"tailwindcss"`;

exports[`bud.project matches expected adjacency array 4`] = `"postcss-preset-env"`;

exports[`bud.project matches expected adjacency array 5`] = `"postcss-nested"`;

exports[`bud.project matches expected adjacency array 6`] = `"postcss-import"`;

exports[`bud.project matches expected adjacency array 7`] = `"postcss"`;

exports[`bud.project matches expected adjacency array 8`] = `"eslint"`;

exports[`bud.project matches expected adjacency array 9`] = `"@roots/bud-tailwindcss"`;

exports[`bud.project matches expected adjacency array 10`] = `"@roots/bud-preset-recommend"`;

exports[`bud.project matches expected adjacency array 11`] = `"@roots/bud-postcss"`;

exports[`bud.project matches expected adjacency array 12`] = `"@roots/bud-babel"`;

exports[`bud.project matches expected adjacency array 13`] = `"@roots/bud"`;

exports[`bud.project references @roots/bud 1`] = `
Object {
  "bud": null,
  "name": "@roots/bud",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-babel 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-babel",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-entrypoints 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-entrypoints",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-entrypoints 2`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-entrypoints",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-eslint 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-eslint",
  "peerDependencies": Object {
    "eslint": "8.6.0",
  },
  "requires": Array [
    Array [
      "eslint",
      "8.6.0",
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-postcss 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-postcss",
  "peerDependencies": Object {
    "postcss": "8.4.5",
    "postcss-import": "14.0.2",
    "postcss-nested": "5.0.6",
    "postcss-preset-env": "7.1.0",
  },
  "requires": Array [
    Array [
      "postcss",
      "8.4.5",
    ],
    Array [
      "postcss-import",
      "14.0.2",
    ],
    Array [
      "postcss-nested",
      "5.0.6",
    ],
    Array [
      "postcss-preset-env",
      "7.1.0",
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-preset-recommend 1`] = `
Object {
  "bud": Object {
    "peers": Array [
      "@roots/bud-babel",
      "@roots/bud-entrypoints",
      "@roots/bud-eslint",
      "@roots/bud-postcss",
    ],
    "type": "extension",
  },
  "name": "@roots/bud-preset-recommend",
  "peerDependencies": Object {},
  "requires": Array [
    Array [
      "@roots/bud-babel",
      Any<String>,
    ],
    Array [
      "@roots/bud-entrypoints",
      Any<String>,
    ],
    Array [
      "@roots/bud-eslint",
      Any<String>,
    ],
    Array [
      "@roots/bud-postcss",
      Any<String>,
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references the root package 1`] = `
Object {
  "browserslist": Array [
    "extends @wordpress/browserslist-config",
  ],
  "bud": null,
  "devDependencies": Object {
    "@roots/bud": "workspace:*",
    "@roots/bud-babel": "workspace:*",
    "@roots/bud-postcss": "workspace:*",
    "@roots/bud-preset-recommend": "workspace:*",
    "@roots/bud-tailwindcss": "workspace:*",
    "eslint": "8.6.0",
    "postcss": "8.4.5",
    "postcss-import": "14.0.2",
    "postcss-nested": "5.0.6",
    "postcss-preset-env": "7.1.0",
    "tailwindcss": "3.0.8",
  },
  "name": "root",
  "parent": null,
  "private": true,
  "requires": Array [
    Array [
      "@roots/bud",
      "workspace:*",
    ],
    Array [
      "@roots/bud-babel",
      "workspace:*",
    ],
    Array [
      "@roots/bud-postcss",
      "workspace:*",
    ],
    Array [
      "@roots/bud-preset-recommend",
      "workspace:*",
    ],
    Array [
      "@roots/bud-tailwindcss",
      "workspace:*",
    ],
    Array [
      "eslint",
      "8.6.0",
    ],
    Array [
      "postcss",
      "8.4.5",
    ],
    Array [
      "postcss-import",
      "14.0.2",
    ],
    Array [
      "postcss-nested",
      "5.0.6",
    ],
    Array [
      "postcss-preset-env",
      "7.1.0",
    ],
    Array [
      "tailwindcss",
      "3.0.8",
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project resolveFrom contains paths of found peers 1`] = `
Array [
  StringContaining "project/package.json",
  StringContaining "project/bud.config.js",
]
`;

exports[`bud.project resolveFrom contains paths of found peers 2`] = `
Array [
  StringContaining "src",
  StringContaining "node_modules",
  StringContaining "/sources",
]
`;
